--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,38 @@
-baseURL = "http://example.org/"
+title = "Notre-Dame de Paris"
+baseURL = "goyth.cn"
 languageCode = "zh-cn"
-title = "Ananke: a Hugo Theme"
 theme = "ananke"
+
+MetaDataFormat = "yaml"
+DefaultContentLanguage = "zh"
+SectionPagesMenu = "main"
+Paginate = 3 # this is set low for demonstrating with dummy content. Set to a higher number
+googleAnalytics = ""
+enableRobotsTXT = true
+disqusShortname = "luke"
+show_reading_time = true
+[sitemap]
+  changefreq = "monthly"
+  priority = 0.5
+  filename = "sitemap.xml"
+
+[params]
+  favicon = ""
+  description = "The last theme you'll ever need. Maybe."
+  facebook = ""
+  twitter = "https://twitter.com/goythz"
+  instagram = ""
+  youtube = ""
+  github = "https://github.com/jsyt"
+  gitlab = ""
+  linkedin = ""
+  mastodon = ""
+  slack = ""
+  stackoverflow = ""
+  # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
+  background_color_class = "bg-black"
+  featured_image = "/images/gohugo-default-sample-hero-image.jpg"
+  recent_posts_number = 2
+  commentoEnable = true
+  body_classes = "avenir bg-near-white"
+  post_content_classes = "avenir bg-near-white"
