--- a/config.toml
+++ b/config.toml
@@ -36,5 +36,5 @@ disqusShortname = "ytop"
   # ga_analytics = "" # google analytics ID e.g UA-116386578-1
 
   # ga_verify = "" # google verification code e.g 5jb-rxeBfITeJQKOuUss3ud6FPGTxXkCho-ZN5qlrZg
-  # twitter = "" # twitter handle e.g @weru
+  twitter = "@ytopnet" # twitter handle e.g @weru
 
